# logforge

./: README.md  docker-compose.yml  test-logs.sh
config/: loki.yml  prometheus.yml  tempo.yml
config/grafana/provisioning/datasources/: datasources.yml
nextjs-ui/: Dockerfile  next.config.js  package.json  tailwind.config.js
nextjs-ui/src/app/: globals.css  layout.tsx  page.tsx
nextjs-ui/src/components/: FilterBar.tsx  LevelBadge.tsx  LogRow.tsx  StatCard.tsx
nextjs-ui/src/lib/: api.ts  types.ts
rust-service/: Cargo.toml  Dockerfile
rust-service/src/: main.rs  metrics.rs  routes.rs  schema.rs  state.rs
rust-service/src/layers/: burst_suppression.rs  mod.rs  probabilistic.rs  trace_aware.rs
