[package]
name    = "logforge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "logforge"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio        = { version = "1", features = ["full"] }

# HTTP server
axum         = { version = "0.7", features = ["json"] }
tower        = "0.4"
tower-http   = { version = "0.5", features = ["cors", "trace"] }

# Structured logging / tracing
tracing                   = "0.1"
tracing-subscriber        = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry     = "0.23"

# OpenTelemetry export (OTLP → Tempo / Loki)
opentelemetry             = { version = "0.22", features = ["trace"] }
opentelemetry_sdk         = { version = "0.22", features = ["rt-tokio"] }
opentelemetry-otlp        = { version = "0.15", features = ["tonic", "grpc-tonic"] }
opentelemetry-semantic-conventions = "0.14"

# Prometheus metrics
metrics                         = "0.22"
metrics-exporter-prometheus     = "0.13"

# Sampling utilities
rand         = "0.8"
dashmap      = "5"

# Serialization
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

# Utilities
uuid         = { version = "1", features = ["v4"] }
chrono       = { version = "0.4", features = ["serde"] }
anyhow       = "1"
thiserror    = "1"
parking_lot  = "1"
